--- a/UnityDatabaseApp/Assembly-CSharp.csproj
+++ b/UnityDatabaseApp/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\carInsert.cs" />
      <Compile Include="Assets\Scripts\carSelect.cs" />
      <Compile Include="Assets\Scripts\Controllers\CarController.cs" />
+     <Compile Include="Assets\Scripts\Controllers\CarSelectController.cs" />
      <Compile Include="Assets\Scripts\Controllers\EmployeeController.cs" />
      <Compile Include="Assets\Scripts\Controllers\EmployeeSelectController.cs" />
      <Compile Include="Assets\Scripts\Controllers\LoadSceneController.cs" />
